# RS_TP_Adaptation

./: .gitignore  .mypy.ini  .pylintrc  CMakeLists.txt  LT_TODO.txt  README.md  ST_TODO.txt  TODO.txt  abaqus_v6.env  main.cxx  main.py  misc_notes.txt  pyproject.toml  testbed.py
Getting Started With Abaqus/2d_simple_truss_stiffness/: simple_truss.com  simple_truss.odb  simple_truss.prt  simple_truss_STIF1.mtx  simple_truss_X1.sim
Getting Started With Abaqus/2d_textbook_truss/: getting_started.inp  truss_problem_1_keyword.com  truss_problem_1_keyword.msg  truss_problem_1_keyword_STIF1.mtx  truss_problem_1_keyword_X3.sim
Getting Started With Abaqus/coarse_mesh_bar/: StiffnessMatrixGen.com  StiffnessMatrixGen.odb  StiffnessMatrixGen.prt  StiffnessMatrixGen_X1.sim
Getting Started With Abaqus/code/: meas_to_nodal_vals.py
Getting Started With Abaqus/fine_mesh_bar/: Job-1.msg  Job-1.odb  Job-1.prt  Job-1_X1.sim
Getting Started With Abaqus/lug_with_stress/: Lug_with_residual_stress.jnl
abaqus/2d_simple_truss_stiffness/: simple_truss.com  simple_truss.inp  simple_truss.msg  simple_truss.odb  simple_truss.prt  simple_truss.sta  simple_truss_STIF1.mtx  simple_truss_X1.sim
abaqus/2d_textbook_truss/: getting_started.inp  truss_problem_1_keyword.com  truss_problem_1_keyword.msg  truss_problem_1_keyword.odb  truss_problem_1_keyword.prt  truss_problem_1_keyword.sta  truss_problem_1_keyword_STIF1.mtx  truss_problem_1_keyword_STIF3.mtx  truss_problem_1_keyword_X1.sim
abaqus/abaqus_experiments/2d_textbook_truss_cae/: Job-1.inp
abaqus/abaqus_experiments/abaqus_feature_object_confusion/: test.py
abaqus/abaqus_experiments/building_region_of_vertices/: README.txt  test.py
abaqus/abaqus_experiments/debugging_debugger/: test.py
abaqus/abaqus_experiments/full_flow/: initial_geometry.stl
abaqus/abaqus_experiments/linear_relationships/: job1.env  job3.inp
abaqus/abaqus_experiments/part_from_mesh/: README.txt
abaqus/abaqus_experiments/phantom_nodes_in_obj/: README.txt
abaqus/abaqus_experiments/using_packages/: README.txt  calling_third_party_packages.py
abaqus/advanced_fine_mesh_bar_cae/: Job-1.com  Job-1.ipm  Job-1.msg  Job-1.sta  advanced_machined_bar.jnl
abaqus/coarse_mesh_bar/: StiffnessMatrixGen.inp  StiffnessMatrixGen.msg  StiffnessMatrixGen.sta
abaqus/code/: meas_to_nodal_vals.py  parse_stiff_mat.py  stiff_disp_mult.py
abaqus/code/backcalc_stress/: approx_disp_funcs.py  plotting.py  stiff_disp_mult.py
abaqus/common_inp_mods/: node_displacement_values_request.txt  stiffness_matrix_output_step.txt
abaqus/experiments/2d_textbook_truss_inp/: Job-1.inp
abaqus/experiments/cutting_thru_tension_cae/: abaqus.rpt  cutting_thru_tension.rec
abaqus/experiments/fine_mesh_bar_cae/: Job-1.inp
abaqus/experiments/shot_peen_bar_cut_thru_tensile_cae/: shot_peen_cut_thru_tensile.rec
abaqus/fine_mesh_bar/: Job-1.com  Job-1.inp  Job-1.sta  machined_bar.cae  machined_bar.jnl
abaqus/fine_mesh_bar_cae/: Job-1.com  Job-1.inp  Job-1.ipm  Job-1.msg  Job-1.odb  Job-1.prt  Job-1.sta  machined_bar.cae  machined_bar.jnl  machined_bar.rec
abaqus/fine_mesh_bar_inp/: Job-1.com  Job-1.inp  Job-1.msg  Job-1.odb  Job-1.prt  Job-1.sta  Job-1_X1.sim
abaqus/inverse_problem_eval/force_application_approach/: README.txt
abaqus/lug_with_stress/: Lug_with_residual_stress.cae
abaqus/shot_peened_bar/: CutShotPeen.com  CutShotPeen.ipm  CutShotPeen.msg  CutShotPeen.sta  shot_peened_bar.jnl
cmake/: FindfTetWild.cmake
experiments/backcalc_stress/: parse_sim_output.py
experiments/common_inp_mods/: node_coordinates_request.txt  user_stress_subroutine.txt
experiments/experiments/3d_spline_cae/: 3d_spline.py
experiments/experiments/debugging_debugger/: README.txt  main.py
experiments/experiments/importing_exporting_stl/: README.txt  importing_exporting_stl.py
experiments/experiments/linear_relationships/: job1.inp  job2.inp
experiments/experiments/linear_relationships_cae/: Job-1.inp  job4.inp  linear_relationships.py
experiments/experiments/measuring_surface_traction_cae/: Job-1.1.SMABulk  Job-1.env  info.txt
experiments/experiments/mesh_to_geometry/: README.txt
experiments/experiments/motivating_blender/: README.txt  mesh_produced_by_abaqus.stl  motivating_remeshing.py
experiments/experiments/new_face_partition_technique_cae/: test.py
experiments/experiments/only_orphan_mesh/: test.py
experiments/experiments/only_orphan_mesh_cae/: test.py
experiments/experiments/overlap_and_volume_cae/: info.txt
experiments/experiments/part_from_mesh_cae/: part_from_mesh.py
experiments/experiments/query_geometry_cae/: test.py
experiments/experiments/solid_sweep_cae/: test.py
experiments/experiments/stdin_stdout_etc/: test.py
experiments/experiments/stl_to_volumetric_mesh/: README.txt
experiments/experiments/test_initial_geometry_cae/: example_problem.txt
experiments/experiments/traction_vectors_cae/: Job-1.inp
experiments/experiments/using_packages/: calling_third_party_packages.py
include/: estimation.hxx  estimator.hxx  stress.hxx
notes/: misc_notes.txt  rearchitecting.xopp
notes/toolpath_geometries/: toolpath_geometries.txt
software/: TODO.txt  main.py  options_for_material_removal.txt  software_arch.txt
software/core/abaqus/: abaqus_metadata.py  abaqus_shim.py  catch_all.py  metadata.py
software/core/boundary_conditions/: boundary_conditions.py
software/core/cut/: cuts.py
software/core/machining/: machining.py
software/core/metadata/: abaqus_metadata.py  (+1 more)
software/core_machining/: part.py  stress.py
software/storage/: storage.py
software/temp/: test_vis_wait_region.py
software/util/: debug.py  geom.py
src/: abaqus.rpy.26  abaqus.rpy.27  abaqus.rpy.28  abaqus.rpy.29  component_test.py  estimation.cpp  main.cc  main.cpp  mesh_utilities.cpp  scan.cpp  stress.cpp  test.py  toolpath.cpp
src/include/: cgal_kernels_switch.hxx  cgal_kernels_switch_p.hxx  estimation_p.hxx  mesh_utilities.hxx  mesh_utilities_p.hxx
src/util/: all_in_simulation.py  blender.py  calling_third_parties.py  debug.py  general_util.py  geom.py
test/: test.cpp
(+128 files in other folders)
